// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Layout /> match snapshot default 1`] = `
<div
  className="Container-t0lxgb-0 eVhiqf"
>
  <div
    className="MenuContainer-t0lxgb-1 kzmCSg"
  >
    <div
      className="Wrapper-sc-3didjk-0 dEsGXY"
    >
      <div
        className="Item-sc-14w5znm-0 bpPYAL"
      >
        <span
          className="Text-sc-14w5znm-1 kuEuFD"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          TOP_NEWS
        </span>
      </div>
      <div
        className="Item-sc-14w5znm-0 bpPYAL"
      >
        <span
          className="Text-sc-14w5znm-1 kuEuFD"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          CATEGORIES
        </span>
      </div>
      <div
        className="Item-sc-14w5znm-0 bpPYAL"
      >
        <span
          className="Text-sc-14w5znm-1 kuEuFD"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          SEARCH
        </span>
      </div>
    </div>
    <div
      className="Wrapper-sc-176nf4l-0 drBuzg"
    >
      <div
        className="Item-fwh4iu-0 XAluN"
        onClick={[Function]}
      >
        <span
          className="Text-fwh4iu-1 gPvOtr"
        >
          GB
        </span>
      </div>
      <div
        className="Item-fwh4iu-0 loxUPt"
        onClick={[Function]}
      >
        <span
          className="Text-fwh4iu-1 gPvOtr"
        >
          US
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Layout /> match snapshot with data 1`] = `
<div
  className="Container-t0lxgb-0 eVhiqf"
>
  <div
    className="MenuContainer-t0lxgb-1 kzmCSg"
  >
    <div
      className="Wrapper-sc-3didjk-0 dEsGXY"
    >
      <div
        className="Item-sc-14w5znm-0 bpPYAL"
      >
        <span
          className="Text-sc-14w5znm-1 kuEuFD"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          TOP_NEWS
        </span>
      </div>
      <div
        className="Item-sc-14w5znm-0 bpPYAL"
      >
        <span
          className="Text-sc-14w5znm-1 kuEuFD"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          CATEGORIES
        </span>
      </div>
      <div
        className="Item-sc-14w5znm-0 bpPYAL"
      >
        <span
          className="Text-sc-14w5znm-1 kuEuFD"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          SEARCH
        </span>
      </div>
    </div>
    <div
      className="Wrapper-sc-176nf4l-0 drBuzg"
    >
      <div
        className="Item-fwh4iu-0 gNqjEj"
        onClick={[Function]}
      >
        <span
          className="Text-fwh4iu-1 gPvOtr"
        >
          GB
        </span>
      </div>
      <div
        className="Item-fwh4iu-0 kNtgHD"
        onClick={[Function]}
      >
        <span
          className="Text-fwh4iu-1 gPvOtr"
        >
          US
        </span>
      </div>
    </div>
  </div>
  <div
    className="Title-t0lxgb-2 rfxyA"
  >
    Title
  </div>
  <div>
    Test
  </div>
</div>
`;
